# sneak-game

./: .gitignore  CMakeLists.txt  README.md
src/: controller.cpp  controller.h  game.cpp  game.h  game_manager.cpp  game_manager.h  game_menu.cpp  game_menu.h  game_state.hpp  leaderboard_manager.cpp  leaderboard_manager.h  main.cpp  renderer.cpp  renderer.h  snake.cpp  snake.h
